superset/overlays/prod/supersetdb-deployment-pvc-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: supersetdb
  name: supersetdb
spec:
  template:
    spec:
      containers:
      - name: postgresql
        lifecycle:
          postStart:
            exec:
              command:
                - /bin/sh
                - '-c'
                - >
                  sleep 5;
                  psql -c "CREATE USER bareos WITH PASSWORD '$BACKUPS_PASSWORD';";
                  psql --dbname=$POSTGRESQL_DATABASE -c "GRANT USAGE ON SCHEMA public TO bareos;";
                  psql --dbname=$POSTGRESQL_DATABASE -c "GRANT SELECT ON ALL TABLES IN SCHEMA public TO bareos;";
                  psql --dbname=$POSTGRESQL_DATABASE -c "GRANT USAGE, SELECT ON ALL SEQUENCES IN SCHEMA public TO bareos;";
