superset/overlays/prod/bareos-fd-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bareos-fd
  name: bareos-fd
spec:
  externalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: bareos-fd
      nodePort: 30947
      port: 9102
      protocol: TCP
      targetPort: 9102
  selector:
    deploymentconfig: bareos-fd
  sessionAffinity: None
  type: NodePort
