superset/overlays/prod/superset-secured-route.enc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    annotations:
        haproxy.router.openshift.io/timeout: 1800s
    labels:
        app: superset
        shard: internal
    name: superset-datahub
spec:
    host: superset.datahub.redhat.com
    port:
        targetPort: 8088-tcp
    to:
        kind: Service
        name: superset
    tls:
        termination: ENC[AES256_GCM,data:xZu2Kg==,iv:6wZZLetrTtTR0c7PXxC9AMJHgD5ASxWA8o/rr/di/Uc=,tag:hnL3VSoeecAE6QtiSjmjgg==,type:str]
        insecureEdgeTerminationPolicy: ENC[AES256_GCM,data:0p1ZNvUCzWQ=,iv:T7f3o7Kufu+WNCNusFR19XN8nP4vBXQ5k8wqO/SBwiQ=,tag:QJzGI6Nhe0NFt9xZ7ThXzw==,type:str]
        certificate: ENC[AES256_GCM,data:hL7FEHNdGIhSNb8aivnaDqyMmFAGu1KL9nWt7msMiM4fHqIAD7OVhO8Skx0k5K6G3XQph0G5vZlzp86EAOf5l10pdzQKRgA1JBwUWNvVV4Ew32oapJuqdxGsjhHqm5VXSIldXj4cPaiI/aMjDlmR/hKdVhiqdFITG+w9NkIy3+a2zDZnO4nHD3e7nO9W/UGscacfTnlcCZvt7YmO3OEeL1lLBeM+5AZezLqiTCWJIA1TGpHbjBSzVMQbhvgDJ1T52KCa80r7Tagfc5AAQoZSyP62J81B7ukJKhI/AOzqDa5ynml6VAKtkG6kX75Nz+fnQPuAAw5t7Ooaaes3aCX03CpEK55cWSqdjEGoErs1tc24AZ06FzuZ+/SEs5KiBbw96YiCt5FbhVpbt0VFbQQujafIzQorjRwT7uJr7b6bLNJQGs+s6GkoTTftQhsIIZygdM+WHSNQ9et [...]
        key: ENC[AES256_GCM,data:EAWECneWG6NXt+h237eDgmCoXNjgrd50CgYZ4gMwamv3RHR0NxgVqtIxSWaOBCyrI1Wc3Hk2cLrLU37K2H5GiIXQHd1xUtQ5IZDr0MW1pSjLm77JY/HYLuDGsjSZQWnT0Wuxh4EyPYlUFtM5PP/G1weWYBClBgPsnzOLIsdzj2b5bf9I7CKbdhm7Zi0NY0PMnZ2xKhWGqAP7HS2xebd5IPlKxNWL52yt/7Hfzy53FJ/IciZhpMDv45ND2h2/AqLohL1utGbi5Q+v+3yujdXNfj4UPTiDGqnlNplDJqdvTtx3nhijMOQ/6MV5E6XPpWXgzhVmkwD7n1pJbBUBd8/szGsKqIfgJnGuyqJluQGQOYuFs3VEMXaJNdz4hY7DqN6FIn/0DeCuiY8mRwJoCKYrEnG9+pVDkUGd87Wier86E5cEqDoRW1uFZhF06EBu8ujrhd3XJmiUZGs27YAR44T [...]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2025-04-07T17:18:33Z"
    mac: ENC[AES256_GCM,data:npsTTUHLZ2MVaztU6ixKetDblQpUhtTZpL26Z85cH/f4nSSwFbB25DHAvKAtagahhG4lKBFcVWHHoQh64ZexEaCthK6iS3ud//nsFS0vLZ6xI0dorQpt8lAPwo8FxdH+20hWWBgwvSofDWU/k23JRosZrbSNorefCGjVtbNyjek=,iv:rFMlyd4qOtKWS+sa8POuUmX7BI8PSfAyx9TdlIAKGXs=,tag:xPDYUfRehaXPjatf+ubu6A==,type:str]
    pgp:
        - created_at: "2021-09-08T20:35:36Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQgAot3K2qTPlLOSz3fuBqGzsXnv3VWTMfleY3caCnu3Lgaa
[...]
            AO4J38YaGT6kmmOY/Wep/xRhn79zVEioJwYPPff46A==
            =jIre
            -----END PGP MESSAGE-----
          fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.8.1
