superset/overlays/prod/supersetdb-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: supersetdb
    shard: internal
  name: supersetdb
spec:
  host: supersetdb.cloud.datahub.psi.redhat.com
  port:
    targetPort: postgresql
  to:
    kind: Service
    name: supersetdb
    weight: 100
